--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,6 +1,6 @@
 FROM debian:jessie 
 
-RUN apt-get update && apt-get -y install locales nasm gcc qemu make
+RUN apt-get update && apt-get -y install locales nasm gcc make qemu
 
 VOLUME /so
 
